declarations, e.g.:

    int i, a[2], (^b)(char), f(double), operator~(S&), operator""_x(char)

** `CDECL_DEBUG` environment variable
If set to an "affirmative" value (one of 1, t, true, y, or yes, case-
insensitive), then **cdecl** will print its process ID and a "waiting for
debugger to attach" message to standard error and wait indefinitely for a
debugger to attach.

** Digraph & trigraph preprocessor support
Digraphs & trigraphs are now supported by the preprocessor:

    %:define  QD(X)  %:X          // same as: #define QD(X) #X
    ??=define QT(X)  ??=X         // same as: #define QT(X) #X

Additionally when showing macros in either digraph or trigraph mode, the
correct tokens are used:

    cdecl> set digraphs
    cdecl> show QD
    %:define QD(X) %:X

** Digraph & trigraph structured binding support
Digraphs & trigraphs are now correctly supported for structured bindings.

** File line number
When reading from a file via `-f`, now includes the file name and error line
number in error messages.

** Fixed multi-declaration of functions
A multi-declaration of functions with different signatures has been fixed,
e.g.:

    cdecl> explain int f(int), g(double)
    declare f as function (integer) returning integer
    declare g as function (double precision) returning integer

** Invalid conf file is now fatal
An error in a conf file is now fatal.

** New `--lineno`, `-L` option
Specifies an integer to add to all line numbers in error and warning messages
as a debugging aid.  (See the man page for details.)

** `show` fixed glob
Previously, doing something like:

    c++decl> show std::ios

wouldn't show anything because the default show-type is user-defined and
std::ios is predefined.  Now, if we didn't show a specific user-defined type
(having a name with no `*`s in it), try showing a specific predefined type.

Additionally, an error message will now be printed if a glob has no matches.


* Changes in Cdecl 17.0.1

** Fixed returning parameter packs