@@ -179,6 +179,7 @@ explain auto int x
 explain auto [x, x]
 explain auto [x] f()
 explain extern auto [x]
+explain C() const
 explain C(int, int) = default
 explain constinit int f()
 explain decltype(x) y
