@@ -24,6 +24,11 @@ insensitive), then **cdecl** will print its process ID and a "waiting for
 debugger to attach" message to standard error and wait indefinitely for a
 debugger to attach.
 
+** Constructor & pre-C99 function qualifiers
+`const`, `volatile`, `__restrict`, `final`, and `override` qualifiers are now
+syntactically allowed on constructors and pre-c99 functions even though they
+are still sematically illegal to give better error messages.
+
 ** Digraph & trigraph preprocessor support
 Digraphs & trigraphs are now supported by the preprocessor:
 
